<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.DetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/iv_beerim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/iv_beerim"
        app:layout_constraintStart_toStartOf="@+id/iv_beerim"
        app:layout_constraintTop_toBottomOf="@+id/iv_beerim" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_beerim"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_abv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/abv"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstbrewed" />

    <TextView
        android:id="@+id/tv_ibu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ibu"
        app:layout_constraintStart_toStartOf="@+id/tv_abv"
        app:layout_constraintTop_toBottomOf="@+id/tv_contributedby" />

    <TextView
        android:id="@+id/tv_brewertips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/brewertips"
        app:layout_constraintStart_toStartOf="@+id/tv_ibu"
        app:layout_constraintTop_toBottomOf="@+id/tv_foodpairing" />

    <TextView
        android:id="@+id/tv_firstbrewed"
        android:text="@string/firstbrewed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        app:layout_constraintWidth_percent=".55"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintTop_toTopOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_contributedby"
        android:layout_marginBottom="5dp"
        android:text="@string/contributedby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        app:layout_constraintWidth_percent=".55"
        app:layout_constraintBottom_toBottomOf="@+id/tv_abv"
        app:layout_constraintEnd_toEndOf="@+id/tv_firstbrewed"
        app:layout_constraintTop_toTopOf="@+id/tv_abv" />

    <TextView
        android:id="@+id/tv_foodpairing"
        android:text="@string/foodpairing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        app:layout_constraintWidth_percent=".55"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ibu"
        app:layout_constraintEnd_toEndOf="@+id/tv_contributedby"
        app:layout_constraintTop_toTopOf="@+id/tv_ibu" />

    <TextView
        android:id="@+id/tv_id"
        android:text="@string/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        app:layout_constraintWidth_percent=".55"
        app:layout_constraintBottom_toBottomOf="@+id/tv_brewertips"
        app:layout_constraintEnd_toEndOf="@+id/tv_foodpairing"
        app:layout_constraintTop_toTopOf="@+id/tv_brewertips" />
</androidx.constraintlayout.widget.ConstraintLayout>